fix: react iframe blocking  connect wallet button
BREAKING CHANGE
Add iframe pointer-events none to disable iframe overlay

Before this change, I was unable to click the Connect Wallet button

I can now hover over & click on the button & other elements on the page

--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -58,6 +58,10 @@ input[type="number"] {
   );
 }
 
-/*iframe { 
+iframe { 
   pointer-events: none; 
-}*/
+}
+
+/*body > iframe {
+  pointer-events: none;
+} */
